# MengPo

./: .gitignore  AGENTS.md  BENCHMARK.md  LICENSE  PLAN.md  README.md  README.zh.md  RELEASE_NOTES.md  RELEASE_NOTES.zh.md  bowl.yaml  pyproject.toml  requirements.txt  setup.bat  人工审计.md  首次使用_first_time_use.md
memory_mcp/: __init__.py  atomic_store.py  config.py  consistency.py  database.py  dedup.py  dedup_audit.py  embeddings.py  freshness.py  rebuild_limits.py  reranker.py  retrieval.py  retrieval_flow.py  retrieval_service.py  scanner.py  schema.py  server.py  store_flow.py  store_preflight.py  telemetry.py
memory_test_files/: AGENTS.md  MEMORY.md  PROFILE.md  SOUL.md
scripts/: bridge.py  check_consistency.py  inject_memory.py  inject_sample.py  manual_qa.py  s1_probe.py
tests/: run_fault_matrix.py  test_atomic_store.py  test_chunk_text.py  test_config.py  test_consistency.py  test_core_modules.py  test_dedup.py  test_dedup_audit.py  test_diary_date.py  test_embed_batch.py  test_embedding_reranker.py  test_embeddings.py  test_pending_review.py  test_rebuild_limits.py  test_reranker.py  test_retrieval.py  test_retrieval_flow.py  test_retrieval_service.py  test_sansheng_stone.py  test_schema_migration.py  test_store_flow.py  test_store_preflight.py  test_vec_blob.py
tests/sample_data/: 2026-01-01_0tau_Tau_discovery.md  2026-01-12_1tau_Bridge_construction.md  2026-01-23_2tau_Sansheng_Stone.md  2026-02-03_3tau_MCP_Server.md
