[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mengpo"
version = "0.10.76"
description = "Memory Evolution & Next-Gen Preference Orchestrator."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "pawpaw" }
]
keywords = ["mcp", "memory", "sqlite", "retrieval", "embeddings"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
]
server = [
    "mcp>=1.0.0",
]

[tool.setuptools]
packages = ["memory_mcp"]
